--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: go
 
+os:
+  - linux
+  - osx
+  - windows
+
 env:
   - GO111MODULE=on
 
@@ -8,12 +13,23 @@ go:
 
 install:
   - GO111MODULE=off go get -v github.com/codeclimate/test-reporter
+  - go get -u golang.org/x/lint/golint
 
 before_script:
   - test-reporter before-build
+  - |-
+      case $TRAVIS_OS_NAME in
+        windows)
+          choco install make
+      esac
 
 script:
   - make test
+  - make
 
 after_script:
-  - test-reporter after-build --coverage-input-type gocov --exit-code $TRAVIS_TEST_RESULT
+  - |-
+      case $TRAVIS_OS_NAME in
+        linux)
+          test-reporter after-build --coverage-input-type gocov --exit-code $TRAVIS_TEST_RESULT
+      esac
