--- a/.travis.yml
+++ b/.travis.yml
@@ -36,8 +36,7 @@ after_script:
 
 deploy:
   provider: releases
-  api_key:
-    secure: $GITHUB_TOKEN
+  api_key: $GITHUB_TOKEN
   file: "ggft*.zip"
   cleanup: false
   draft: true
