--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_script:
 
 script:
   - make test
-  - make
+  - DIST_NAME="ggft_${TRAVIS_OS_NAME}" make dist
 
 after_script:
   - |-
@@ -36,7 +36,7 @@ after_script:
 
 deploy:
   provider: releases
-  api_key: $GITHUB_TOKEN
+  api_key: $GITHUB_TOKEN_TRAVIS
   file: "ggft*.zip"
   cleanup: false
   draft: true
