--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,7 @@ deploy:
   provider: releases
   api_key: $GITHUB_TOKEN_TRAVIS
   file: "ggft*.zip"
+  file_glob: true
   cleanup: false
   draft: true
   on:
