--- a/.travis.yml
+++ b/.travis.yml
@@ -36,11 +36,10 @@ after_script:
 
 deploy:
   provider: releases
-  api_key: $GITHUB_TOKEN_TRAVIS
+  api_key: $GITHUB_TOKEN
   file: "ggft*.zip"
   file_glob: true
   skip_cleanup: true
   draft: true
   on:
-    branch: travis
-    # tags: true
+    tags: true
