--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,13 @@ language: go
 os:
   - linux
   - osx
-  - windows
+  # - windows
 
 env:
   - GO111MODULE=on
 
 go:
-  - 1.14.x
+  - 1.15.x
 
 install:
   - GO111MODULE=off go get -v github.com/codeclimate/test-reporter
@@ -25,7 +25,7 @@ before_script:
 
 script:
   - make test
-  - make
+  - DIST_NAME="ggft_${TRAVIS_OS_NAME}" make dist
 
 after_script:
   - |-
@@ -33,3 +33,13 @@ after_script:
         linux)
           test-reporter after-build --coverage-input-type gocov --exit-code $TRAVIS_TEST_RESULT
       esac
+
+deploy:
+  provider: releases
+  api_key: $GITHUB_TOKEN
+  file: "ggft*.zip"
+  file_glob: true
+  skip_cleanup: true
+  draft: true
+  on:
+    tags: true
