Fixing awk issues on osx

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ go:
   - 1.15.x
 
 install:
+  - if [ $TRAVIS_OS_NAME = osx ]; then brew update; fi
   - GO111MODULE=off go get -v github.com/codeclimate/test-reporter
   - go get -u golang.org/x/lint/golint
 
@@ -21,6 +22,8 @@ before_script:
       case $TRAVIS_OS_NAME in
         windows)
           choco install make
+        osx)
+          brew install gawk
       esac
 
 script:
