--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ go:
   - 1.15.x
 
 install:
-  - if [ $TRAVIS_OS_NAME = osx ]; then brew update; fi
+  # - if [ $TRAVIS_OS_NAME = osx ]; then brew update; fi
   - GO111MODULE=off go get -v github.com/codeclimate/test-reporter
   - go get -u golang.org/x/lint/golint
 
