--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,11 @@ script:
 after_script:
   - |-
       case $TRAVIS_OS_NAME in
-        linux)
+        windows)
+          ;;
+        *)
           test-reporter after-build --coverage-input-type gocov --exit-code $TRAVIS_TEST_RESULT
+          ;;
       esac
 
 deploy:
