--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ os:
   - osx
   - windows
 
+services:
+  - docker
+
 env:
   - GO111MODULE=on
 
@@ -27,6 +30,12 @@ before_script:
 script:
   - make test
   - export DIST_NAME="ggft_${TRAVIS_OS_NAME}"
+  - |-
+    case $TRAVIS_OS_NAME in
+      linux)
+        make semgrep
+        ;;
+    esac
   - make dist
 
 after_script:
